Revise portfolio content with personal details
Updated personal information and added details about educational background and skills.

--- a/Portfolio.html
+++ b/Portfolio.html
@@ -453,8 +453,8 @@
     <section id="home">
         <div class="container">
             <div class="hero-content">
-                <h1>Your Name</h1>
-                <p>Student | Developer | Innovator</p>
+                <h1>Irfan Adib bin Sahak</h1>
+                <p>Final Year Computer Science Student</p>
                 <a href="#contact" class="cta-button">Get In Touch</a>
             </div>
         </div>
@@ -466,8 +466,10 @@
         <div class="container">
             <h2>About Me</h2>
             <div class="card">
-                <p>Welcome to my portfolio! I'm a passionate student with a keen interest in technology and innovation. This section can include your educational background, interests, and what drives you. Feel free to add your personal story and what makes you unique.</p>
-                <p style="margin-top: 1rem;">You can customize this section to reflect your personality and professional aspirations.</p>
+                <p>Welcome to my portfolio! I am currently a final year student pursuing Computer Science with a specialization in Data Science and Computational Intelligence at International Islamic University Malaysia.</p>
+                <p style="margin-top: 1rem;">I have worked with several programming languages including C++, Python and Javascript. I have a solid foundation in technological frameworks like Computer Networking, Data Structures and Algorithms, Web Technologies, Computer Architecture and Artificial Intelligence.</p>
+                <p style="margin-top: 1rem;">As a student, I had taken on various roles in student organizations, facilitating program succession by assuming roles such as Public Relations, Preparation and Technical, Program Manager and so on.</p>
+                <p style="margin-top: 1rem;">Exploring and trying out new things are some of my objectives as a student. I am open to learning and making new experience as a future graduate.</p>
             </div>
         </div>
     </section>
