Revise project card for Final Year Project - LeptoSafe
Updated project details for Final Year Project - LeptoSafe, including a new image and description.

--- a/index.html
+++ b/index.html
@@ -481,19 +481,16 @@
             
             <div class="project-card">
                 <div class="project-image">
-                    <svg width="100%" height="200" xmlns="http://www.w3.org/2000/svg">
-                        <rect width="100%" height="100%" fill="#1a1a2e"/>
-                        <text x="50%" y="50%" font-family="Arial" font-size="24" fill="#64b5f6" text-anchor="middle" dominant-baseline="middle">Project Image</text>
-                    </svg>
+                    <img src="images/Project 1.jpg" alt="Final Year Project" style="display:block; width:100%; height:auto;" />
                 </div>
                 <div class="project-header">
-                    <h3>Project Title 1</h3>
+                    <h3>Final Year Project - LeptoSafe</h3>
                 </div>
-                <p>A brief description of your project, what problems it solves, and the technologies you used to build it. Explain the impact and what you learned from this experience.</p>
+                <p>LeptoSafe, a Flutter-based mobile application focusing on the individual management of the zoonotic disease, leptospirosis. Features include hotspot and health facilities tracking as well as self-assessment questionnaire among others. The technology stack includes Flutter, Firebase, Google Maps API and Android Studio.</p>
                 <div class="project-tags">
-                    <span class="tag">Technology 1</span>
-                    <span class="tag">Technology 2</span>
-                    <span class="tag">Technology 3</span>
+                    <span class="tag">Flutter</span>
+                    <span class="tag">Firebase</span>
+                    <span class="tag">Google Maps API</span>
                 </div>
             </div>
 
