--- a/index.html
+++ b/index.html
@@ -433,48 +433,39 @@
             <div class="card-grid">
                 <div class="card">
                     <div class="card-image">
-                        <svg width="100%" height="180" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="100%" height="100%" fill="#1a1a2e"/>
-                            <text x="50%" y="50%" font-family="Arial" font-size="20" fill="#64b5f6" text-anchor="middle" dominant-baseline="middle">Project Image</text>
-                        </svg>
+                        <img src="images/Project 1.jpg" alt="Final Year Project" style="display:block; width:100%; height:auto;" />
                     </div>
-                    <h3>💻 Project Title 1</h3>
-                    <p>A brief description of your project, what problems it solves, and the technologies you used to build it. Explain the impact and what you learned from this experience.</p>
+                    <h3>💻 Final Year Project - LeptoSafe</h3>
+                    <p>LeptoSafe, a Flutter-based mobile application focusing on the individual management of the zoonotic disease, leptospirosis. Features include hotspot and health facilities tracking as well as self-assessment questionnaire among others. The technology stack includes Flutter, Firebase, Google Maps API and Android Studio.</p>
                     <div class="project-tags">
-                        <span class="tag">Technology 1</span>
-                        <span class="tag">Technology 2</span>
-                        <span class="tag">Technology 3</span>
+                        <span class="tag">Flutter</span>
+                        <span class="tag">Firebase</span>
+                        <span class="tag">Google Maps API</span>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="card-image">
-                        <svg width="100%" height="180" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="100%" height="100%" fill="#1a1a2e"/>
-                            <text x="50%" y="50%" font-family="Arial" font-size="20" fill="#64b5f6" text-anchor="middle" dominant-baseline="middle">Project Image</text>
-                        </svg>
+                        <img src="images/Project 2.jpg" alt="Vehicle Type Classification System" style="display:block; width:100%; height:auto;" />
                     </div>
-                    <h3>📱 Project Title 2</h3>
-                    <p>Another project showcasing your skills and creativity. Describe the challenges you faced and how you overcame them.</p>
+                    <h3>📱 Vehicle Type Classification System</h3>
+                    <p>Developed a multi-class image classification system to automate targeted billboard advertising. The system leverages EfficientNetB0, a deep learning model designed for image classification tasks. Integrate TensorFlow and Keras to process and train the model, achieving a 96% accuracy in classifying 7 vehicle body types.</p>
                     <div class="project-tags">
-                        <span class="tag">Technology 1</span>
-                        <span class="tag">Technology 2</span>
+                        <span class="tag">Python</span>
+                        <span class="tag">Tensorflow</span>
                     </div>
                 </div>
 
                 <div class="card">
                     <div class="card-image">
-                        <svg width="100%" height="180" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="100%" height="100%" fill="#1a1a2e"/>
-                            <text x="50%" y="50%" font-family="Arial" font-size="20" fill="#64b5f6" text-anchor="middle" dominant-baseline="middle">Project Image</text>
-                        </svg>
+                        <img src="images/Project 3.jpg" alt="Data Analytics for Zakat Allocation Optimization" style="display:block; width:100%; height:auto;" />
                     </div>
-                    <h3>🌐 Project Title 3</h3>
-                    <p>A third project demonstrating your versatility and continuous learning in different areas.</p>
+                    <h3>🌐 Data Analytics for Zakat Allocation Optimization</h3>
+                    <p>Developed a data science solution to automate the evaluation process for university Zakat distribution. Utilized Python for data preprocessing and Matplotlib/Seaborn to generate visual insights. Built and integrated a GUI via Streamlit to present data visualizations and project findings to stakeholders.</p>
                     <div class="project-tags">
-                        <span class="tag">Technology 1</span>
-                        <span class="tag">Technology 2</span>
-                        <span class="tag">Technology 3</span>
+                        <span class="tag">Python</span>
+                        <span class="tag">Matplotlib</span>
+                        <span class="tag">Power BI</span>
                     </div>
                 </div>
             </div>
@@ -520,41 +511,40 @@
         </div>
     </section>
 
-    <!-- Academic Achievements Section -->
+    <!-- Achievements Section -->
     <section id="achievements">
         <div class="container">
-            <h2>Academic Achievements</h2>
+            <h2>Achievements</h2>
             <div class="card-grid">
                 <div class="card">
                     <div class="card-image">
-                        <svg width="100%" height="180" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="100%" height="100%" fill="#1a1a2e"/>
-                            <text x="50%" y="50%" font-family="Arial" font-size="20" fill="#64b5f6" text-anchor="middle" dominant-baseline="middle">Achievement Image</text>
-                        </svg>
+                        <img src="images/Achievement 1.jpg" alt="Dean's List Sem 1 2024" style="display:block; width:100%; height:auto;" />
                     </div>
-                    <h3>🏆 Achievement Title 1</h3>
+                    <h3>🏆 Dean's List Sem 1 2024</h3>
                     <p>Description of your academic achievement. This could be awards, scholarships, honors, or notable academic accomplishments.</p>
                     <p style="margin-top: 0.5rem; color: #64b5f6; font-size: 0.9rem;">Year: 2024</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <svg width="100%" height="180" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="100%" height="100%" fill="#1a1a2e"/>
-                            <text x="50%" y="50%" font-family="Arial" font-size="20" fill="#64b5f6" text-anchor="middle" dominant-baseline="middle">Achievement Image</text>
-                        </svg>
+                        <img src="images/Achievement 2.jpg" alt="Dean's List Sem 2 2025" style="display:block; width:100%; height:auto;" />
                     </div>
-                    <h3>🎓 Achievement Title 2</h3>
+                    <h3>🎓 Dean's List Sem 2 2025</h3>
                     <p>Another significant academic milestone or recognition you've received during your studies.</p>
                     <p style="margin-top: 0.5rem; color: #64b5f6; font-size: 0.9rem;">Year: 2023</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <svg width="100%" height="180" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="100%" height="100%" fill="#1a1a2e"/>
-                            <text x="50%" y="50%" font-family="Arial" font-size="20" fill="#64b5f6" text-anchor="middle" dominant-baseline="middle">Achievement Image</text>
-                        </svg>
+                        <img src="images/Achievement 3.jpg" alt="i-Capital Talent Show 2024 Champion" style="display:block; width:100%; height:auto;" />
                     </div>
-                    <h3>📚 Achievement Title 3</h3>
+                    <h3>📚 i-Capital Talent Show 2024 Champion</h3>
+                    <p>Additional academic honors, Dean's list, GPA achievements, or other academic distinctions.</p>
+                    <p style="margin-top: 0.5rem; color: #64b5f6; font-size: 0.9rem;">Year: 2023</p>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/Achievement 4.jpg" alt="ICT Arena 2025 Volleyball 3rd Place" style="display:block; width:100%; height:auto;" />
+                    </div>
+                    <h3>📚 ICT Arena 2025 Volleyball 3rd Place</h3>
                     <p>Additional academic honors, Dean's list, GPA achievements, or other academic distinctions.</p>
                     <p style="margin-top: 0.5rem; color: #64b5f6; font-size: 0.9rem;">Year: 2023</p>
                 </div>
