Update image source path for Project 1

--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
             <div class="card-grid">
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Project 1.jpg" alt="Final Year Project" style="display:block; width:auto; height:auto;" />
+                        <img src="/path/to/images/Project 1.jpg" alt="Final Year Project" style="display:block; width:auto; height:auto;" />
                     </div>
                     <h3>💻 Final Year Project - LeptoSafe</h3>
                     <p>LeptoSafe, a Flutter-based mobile application focusing on the individual management of the zoonotic disease, leptospirosis. Features include hotspot and health facilities tracking as well as self-assessment questionnaire among others. The technology stack includes Flutter, Firebase, Google Maps API and Android Studio.</p>
