--- a/index.html
+++ b/index.html
@@ -203,6 +203,13 @@
             height: auto;
         }
 
+        .card-image img {
+            display: block;
+            width: 100%;
+            height: auto;
+            object-fit: cover;
+        }
+
         .card h3 {
             color: #64b5f6;
             margin-bottom: 1rem;
@@ -433,7 +440,7 @@
             <div class="card-grid">
                 <div class="card">
                     <div class="card-image">
-                        <img src="/path/to/images/Project 1.jpg" alt="Final Year Project" style="display:block; width:auto; height:auto;" />
+                        <img src="images/Project 1.jpg" alt="Final Year Project"/>
                     </div>
                     <h3>💻 Final Year Project - LeptoSafe</h3>
                     <p>LeptoSafe, a Flutter-based mobile application focusing on the individual management of the zoonotic disease, leptospirosis. Features include hotspot and health facilities tracking as well as self-assessment questionnaire among others. The technology stack includes Flutter, Firebase, Google Maps API and Android Studio.</p>
@@ -446,7 +453,7 @@
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Project 2.jpg" alt="Vehicle Type Classification System" style="display:block; width:auto; height:auto;" />
+                        <img src="images/Project 2.jpg" alt="Vehicle Type Classification System"/>
                     </div>
                     <h3>📱 Vehicle Type Classification System</h3>
                     <p>Developed a multi-class image classification system to automate targeted billboard advertising. The system leverages EfficientNetB0, a deep learning model designed for image classification tasks. Integrate TensorFlow and Keras to process and train the model, achieving a 96% accuracy in classifying 7 vehicle body types.</p>
@@ -458,7 +465,7 @@
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Project 3.jpg" alt="Data Analytics for Zakat Allocation Optimization" style="display:block; width:auto; height:auto;" />
+                        <img src="images/Project 3.jpg" alt="Data Analytics for Zakat Allocation Optimization" />
                     </div>
                     <h3>🌐 Data Analytics for Zakat Allocation Optimization</h3>
                     <p>Developed a data science solution to automate the evaluation process for university Zakat distribution. Utilized Python for data preprocessing and Matplotlib/Seaborn to generate visual insights. Built and integrated a GUI via Streamlit to present data visualizations and project findings to stakeholders.</p>
@@ -518,7 +525,7 @@
             <div class="card-grid">
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Achievement 1.jpg" alt="Dean's List Sem 1 2024" style="display:block; width:auto; height:auto;" />
+                        <img src="images/Achievement 1.jpg" alt="Dean's List Sem 1 2024" />
                     </div>
                     <h3>🏆 Dean's List Sem 1 2024</h3>
                     <p>Description of your academic achievement. This could be awards, scholarships, honors, or notable academic accomplishments.</p>
@@ -526,7 +533,7 @@
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Achievement 2.jpg" alt="Dean's List Sem 2 2025" style="display:block; width:auto; height:auto;" />
+                        <img src="images/Achievement 2.jpg" alt="Dean's List Sem 2 2025"/>
                     </div>
                     <h3>🎓 Dean's List Sem 2 2025</h3>
                     <p>Another significant academic milestone or recognition you've received during your studies.</p>
@@ -534,7 +541,7 @@
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Achievement 3.jpg" alt="i-Capital Talent Show 2024 Champion" style="display:block; width:auto; height:auto;" />
+                        <img src="images/Achievement 3.jpg" alt="i-Capital Talent Show 2024 Champion"/>
                     </div>
                     <h3>📚 i-Capital Talent Show 2024 Champion</h3>
                     <p>Additional academic honors, Dean's list, GPA achievements, or other academic distinctions.</p>
@@ -542,7 +549,7 @@
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Achievement 4.jpg" alt="ICT Arena 2025 Volleyball 3rd Place" style="display:block; width:auto; height:auto;" />
+                        <img src="images/Achievement 4.jpg" alt="ICT Arena 2025 Volleyball 3rd Place"/>
                     </div>
                     <h3>📚 ICT Arena 2025 Volleyball 3rd Place</h3>
                     <p>Additional academic honors, Dean's list, GPA achievements, or other academic distinctions.</p>
