Add observer for card and skill-category elements

--- a/index.html
+++ b/index.html
@@ -683,3 +683,8 @@
         }, observerOptions);
 
         document.querySelectorAll('.card, .skill-category').forEach(el => {
+    observer.observe(el);
+});
+</script>
+</body>
+</html>
