Update image file extensions from .jpg to .jpeg and .png

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
             <div class="card-grid">
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Project 1.jpg" alt="Final Year Project"/>
+                        <img src="images/Project 1.jpeg" alt="Final Year Project"/>
                     </div>
                     <h3>💻 Final Year Project - LeptoSafe</h3>
                     <p>LeptoSafe, a Flutter-based mobile application focusing on the individual management of the zoonotic disease, leptospirosis. Features include hotspot and health facilities tracking as well as self-assessment questionnaire among others. The technology stack includes Flutter, Firebase, Google Maps API and Android Studio.</p>
@@ -453,7 +453,7 @@
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Project 2.jpg" alt="Vehicle Type Classification System"/>
+                        <img src="images/Project 2.jpeg" alt="Vehicle Type Classification System"/>
                     </div>
                     <h3>📱 Vehicle Type Classification System</h3>
                     <p>Developed a multi-class image classification system to automate targeted billboard advertising. The system leverages EfficientNetB0, a deep learning model designed for image classification tasks. Integrate TensorFlow and Keras to process and train the model, achieving a 96% accuracy in classifying 7 vehicle body types.</p>
@@ -465,7 +465,7 @@
 
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Project 3.jpg" alt="Data Analytics for Zakat Allocation Optimization" />
+                        <img src="images/Project 3.jpeg" alt="Data Analytics for Zakat Allocation Optimization" />
                     </div>
                     <h3>🌐 Data Analytics for Zakat Allocation Optimization</h3>
                     <p>Developed a data science solution to automate the evaluation process for university Zakat distribution. Utilized Python for data preprocessing and Matplotlib/Seaborn to generate visual insights. Built and integrated a GUI via Streamlit to present data visualizations and project findings to stakeholders.</p>
@@ -525,35 +525,31 @@
             <div class="card-grid">
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Achievement 1.jpg" alt="Dean's List Sem 1 2024" />
+                        <img src="images/Achievement 1.png" alt="Dean's List Sem 1 2024" />
                     </div>
                     <h3>🏆 Dean's List Sem 1 2024</h3>
                     <p>Description of your academic achievement. This could be awards, scholarships, honors, or notable academic accomplishments.</p>
-                    <p style="margin-top: 0.5rem; color: #64b5f6; font-size: 0.9rem;">Year: 2024</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Achievement 2.jpg" alt="Dean's List Sem 2 2025"/>
+                        <img src="images/Achievement 2.png" alt="Dean's List Sem 2 2025"/>
                     </div>
                     <h3>🎓 Dean's List Sem 2 2025</h3>
                     <p>Another significant academic milestone or recognition you've received during your studies.</p>
-                    <p style="margin-top: 0.5rem; color: #64b5f6; font-size: 0.9rem;">Year: 2023</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Achievement 3.jpg" alt="i-Capital Talent Show 2024 Champion"/>
+                        <img src="images/Achievement 3.png" alt="i-Capital Talent Show 2024 Champion"/>
                     </div>
                     <h3>📚 i-Capital Talent Show 2024 Champion</h3>
                     <p>Additional academic honors, Dean's list, GPA achievements, or other academic distinctions.</p>
-                    <p style="margin-top: 0.5rem; color: #64b5f6; font-size: 0.9rem;">Year: 2023</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Achievement 4.jpg" alt="ICT Arena 2025 Volleyball 3rd Place"/>
+                        <img src="images/Achievement 4.png" alt="ICT Arena 2025 Volleyball 3rd Place"/>
                     </div>
                     <h3>📚 ICT Arena 2025 Volleyball 3rd Place</h3>
                     <p>Additional academic honors, Dean's list, GPA achievements, or other academic distinctions.</p>
-                    <p style="margin-top: 0.5rem; color: #64b5f6; font-size: 0.9rem;">Year: 2023</p>
                 </div>
             </div>
         </div>
