Update achievements and skills sections in index.html
Removed descriptions of academic achievements and updated skill categories.

--- a/index.html
+++ b/index.html
@@ -528,28 +528,24 @@
                         <img src="images/Achievement-1.jpeg" alt="Dean's List Sem 1 2024" />
                     </div>
                     <h3>🏆 Dean's List Sem 1 2024</h3>
-                    <p>Description of your academic achievement. This could be awards, scholarships, honors, or notable academic accomplishments.</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
                         <img src="images/Achievement-2.jpeg" alt="Dean's List Sem 2 2025"/>
                     </div>
                     <h3>🎓 Dean's List Sem 2 2025</h3>
-                    <p>Another significant academic milestone or recognition you've received during your studies.</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
                         <img src="images/Achievement-3.jpeg" alt="i-Capital Talent Show 2024 Champion"/>
                     </div>
                     <h3>📚 i-Capital Talent Show 2024 Champion</h3>
-                    <p>Additional academic honors, Dean's list, GPA achievements, or other academic distinctions.</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
                         <img src="images/Achievement-4.jpeg" alt="ICT Arena 2025 Volleyball 3rd Place"/>
                     </div>
                     <h3>📚 ICT Arena 2025 Volleyball 3rd Place</h3>
-                    <p>Additional academic honors, Dean's list, GPA achievements, or other academic distinctions.</p>
                 </div>
             </div>
         </div>
@@ -565,44 +561,28 @@
                     <div class="skill-tags">
                         <span class="skill-tag">Python</span>
                         <span class="skill-tag">JavaScript</span>
-                        <span class="skill-tag">Java</span>
                         <span class="skill-tag">C++</span>
-                        <span class="skill-tag">TypeScript</span>
                     </div>
                 </div>
 
                 <div class="skill-category">
-                    <h3>Web Development</h3>
+                    <h3>Framework and Tools</h3>
                     <div class="skill-tags">
-                        <span class="skill-tag">HTML/CSS</span>
-                        <span class="skill-tag">React</span>
-                        <span class="skill-tag">Node.js</span>
-                        <span class="skill-tag">Vue.js</span>
-                        <span class="skill-tag">Express</span>
+                        <span class="skill-tag">Flutter</span>
+                        <span class="skill-tag">Tensorflow</span>
+                        <span class="skill-tag">Keras</span>
                     </div>
                 </div>
 
                 <div class="skill-category">
-                    <h3>Tools & Technologies</h3>
+                    <h3>Soft Skills</h3>
                     <div class="skill-tags">
-                        <span class="skill-tag">Git</span>
-                        <span class="skill-tag">Docker</span>
-                        <span class="skill-tag">SQL</span>
-                        <span class="skill-tag">MongoDB</span>
-                        <span class="skill-tag">AWS</span>
+                        <span class="skill-tag">Leadership</span>
+                        <span class="skill-tag">Communication</span>
+                        <span class="skill-tag">Teamwork</span>
                     </div>
                 </div>
 
-                <div class="skill-category">
-                    <h3>Other Skills</h3>
-                    <div class="skill-tags">
-                        <span class="skill-tag">UI/UX Design</span>
-                        <span class="skill-tag">Machine Learning</span>
-                        <span class="skill-tag">Data Analysis</span>
-                        <span class="skill-tag">Agile</span>
-                        <span class="skill-tag">Problem Solving</span>
-                    </div>
-                </div>
             </div>
         </div>
     </section>
