--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
 
         .card-image img {
             display: block;
-            width: auto;
+            width: 100%;
             height: auto;
             object-fit: cover;
         }
