Update contact information in index.html

--- a/index.html
+++ b/index.html
@@ -595,15 +595,15 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <div class="contact-icon">📧</div>
-                    <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="ff86908a8dd19a929e9693bf9a879e928f939ad19c9092">[email&#160;protected]</a></p>
+                    <p><a href="irfanadibsahak@gmail.com"</a>Email</p>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">💼</div>
-                    <p>LinkedIn Profile</p>
+                    <p><a href="https://shorturl.at/gWsUd"</a>LinkedIn Profile</p>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">🐙</div>
-                    <p>GitHub Profile</p>
+                    <p><a href="https://github.com/Irfanadib"</a>GitHub Profile</p>
                 </div>
             </div>
         </div>
