--- a/index.html
+++ b/index.html
@@ -595,7 +595,7 @@
             <div class="contact-info">
                 <div class="contact-item">
                     <div class="contact-icon">📧</div>
-                    <p><a href="irfanadibsahak@gmail.com"</a>Email</p>
+                    <p>irfanadibsahak@gmail.com</p>
                 </div>
                 <div class="contact-item">
                     <div class="contact-icon">💼</div>
