Rename Co-curricular Activities to Activities

--- a/index.html
+++ b/index.html
@@ -479,39 +479,51 @@
         </div>
     </section>
 
-    <!-- Co-curricular Activities Section -->
+    <!-- Activities Section -->
     <section id="activities">
         <div class="container">
-            <h2>Co-curricular Activities</h2>
+            <h2>Activities</h2>
             <div class="card-grid">
                 <div class="card">
                     <div class="card-image">
-                        <svg width="100%" height="180" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="100%" height="100%" fill="#1a1a2e"/>
-                            <text x="50%" y="50%" font-family="Arial" font-size="20" fill="#64b5f6" text-anchor="middle" dominant-baseline="middle">Activity Image</text>
-                        </svg>
+                        <img src="images/Activity-1.png" alt="Data Analytics for Zakat Allocation Optimization" />
                     </div>
                     <h3>🎯 Activity 1</h3>
                     <p>Leadership roles, club memberships, or extracurricular activities you've participated in.</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <svg width="100%" height="180" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="100%" height="100%" fill="#1a1a2e"/>
-                            <text x="50%" y="50%" font-family="Arial" font-size="20" fill="#64b5f6" text-anchor="middle" dominant-baseline="middle">Activity Image</text>
-                        </svg>
+                        <img src="images/Activity-2.png" alt="Data Analytics for Zakat Allocation Optimization" />
                     </div>
                     <h3>🤝 Activity 2</h3>
                     <p>Community service, volunteer work, or social initiatives you've been involved with.</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <svg width="100%" height="180" xmlns="http://www.w3.org/2000/svg">
-                            <rect width="100%" height="100%" fill="#1a1a2e"/>
-                            <text x="50%" y="50%" font-family="Arial" font-size="20" fill="#64b5f6" text-anchor="middle" dominant-baseline="middle">Activity Image</text>
-                        </svg>
+                        <img src="images/Activity-3.png" alt="Data Analytics for Zakat Allocation Optimization" />
                     </div>
                     <h3>🎨 Activity 3</h3>
+                    <p>Sports, arts, cultural activities, or other interests outside of academics.</p>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/Activity-4.png" alt="Data Analytics for Zakat Allocation Optimization" />
+                    </div>
+                    <h3>⚡ Activity 4</h3>
+                    <p>Sports, arts, cultural activities, or other interests outside of academics.</p>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/Activity-5.png" alt="Data Analytics for Zakat Allocation Optimization" />
+                    </div>
+                    <h3>👏🏻 Activity 5</h3>
+                    <p>Sports, arts, cultural activities, or other interests outside of academics.</p>
+                </div>
+                <div class="card">
+                    <div class="card-image">
+                        <img src="images/Activity-6.png" alt="Data Analytics for Zakat Allocation Optimization" />
+                    </div>
+                    <h3>✅ Activity 6</h3>
                     <p>Sports, arts, cultural activities, or other interests outside of academics.</p>
                 </div>
             </div>
