Update activity images and descriptions in index.html

--- a/index.html
+++ b/index.html
@@ -486,42 +486,42 @@
             <div class="card-grid">
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Activity-1.png" alt="Data Analytics for Zakat Allocation Optimization" />
+                        <img src="images/Activity-1.jpeg" alt="Public Relations i-Hax 2023" />
                     </div>
-                    <h3>🎯 Activity 1</h3>
-                    <p>Leadership roles, club memberships, or extracurricular activities you've participated in.</p>
+                    <h3>🎯 Public Relations i-Hax 2023</h3>
+                    <p>Responsible for engaging with sponsors and speakers for the program</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Activity-2.png" alt="Data Analytics for Zakat Allocation Optimization" />
+                        <img src="images/Activity-2.jpeg" alt="Program Manager Induction PERMATA IIUM 2024/2025" />
                     </div>
-                    <h3>🤝 Activity 2</h3>
-                    <p>Community service, volunteer work, or social initiatives you've been involved with.</p>
+                    <h3>🤝 Program Manager Induction PERMATA IIUM 2024/2025</h3>
+                    <p>Oversee the program's flow and negotiate program's proposal with the authorities</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Activity-3.png" alt="Data Analytics for Zakat Allocation Optimization" />
+                        <img src="images/Activity-3.jpeg" alt="Floor Manager Liga Anak Negeri IIUM 2025" />
                     </div>
-                    <h3>🎨 Activity 3</h3>
-                    <p>Sports, arts, cultural activities, or other interests outside of academics.</p>
+                    <h3>🎨 Floor Manager Liga Anak Negeri IIUM 2025</h3>
+                    <p>Responsible for the flow of tentative and floor plan for the closing ceremony</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Activity-4.png" alt="Data Analytics for Zakat Allocation Optimization" />
+                        <img src="images/Activity-4.jpeg" alt="Program Manager AGM Gamelan Gema Gangsa IIUM 2024/2025" />
                     </div>
-                    <h3>⚡ Activity 4</h3>
-                    <p>Sports, arts, cultural activities, or other interests outside of academics.</p>
+                    <h3>⚡ Program Manager AGM Gamelan Gema Gangsa IIUM 2024/2025</h3>
+                    <p>Handling the Annual Grand Meeting for the club, oversee program's flow and engage with relevant stakeholders</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Activity-5.png" alt="Data Analytics for Zakat Allocation Optimization" />
+                        <img src="images/Activity-5.jpeg" alt="Data Analytics for Zakat Allocation Optimization" />
                     </div>
                     <h3>👏🏻 Activity 5</h3>
                     <p>Sports, arts, cultural activities, or other interests outside of academics.</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Activity-6.png" alt="Data Analytics for Zakat Allocation Optimization" />
+                        <img src="images/Activity-6.jpeg" alt="Data Analytics for Zakat Allocation Optimization" />
                     </div>
                     <h3>✅ Activity 6</h3>
                     <p>Sports, arts, cultural activities, or other interests outside of academics.</p>
