Replace images and update Activity 6 details

--- a/index.html
+++ b/index.html
@@ -507,24 +507,24 @@
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Activity-4.jpeg" alt="Program Manager AGM Gamelan Gema Gangsa IIUM 2024/2025" />
+                        <img src="images/Activity-4.png" alt="Program Manager AGM Gamelan Gema Gangsa IIUM 2024/2025" />
                     </div>
                     <h3>⚡ Program Manager AGM Gamelan Gema Gangsa IIUM 2024/2025</h3>
                     <p>Handling the Annual Grand Meeting for the club, oversee program's flow and engage with relevant stakeholders</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Activity-5.jpeg" alt="Data Analytics for Zakat Allocation Optimization" />
+                        <img src="images/Activity-5.png" alt="Data Analytics for Zakat Allocation Optimization" />
                     </div>
                     <h3>👏🏻 Activity 5</h3>
                     <p>Sports, arts, cultural activities, or other interests outside of academics.</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Activity-6.jpeg" alt="Data Analytics for Zakat Allocation Optimization" />
+                        <img src="images/Activity-6.png" alt="Data Analytics for Zakat Allocation Optimization" />
                     </div>
-                    <h3>✅ Activity 6</h3>
-                    <p>Sports, arts, cultural activities, or other interests outside of academics.</p>
+                    <h3>✅ Volunteer Mahasiswa Untuk Semua IIUM 2025</h3>
+                    <p>Joining as volunteer for a 'gotong-royong' programme in IIUM</p>
                 </div>
             </div>
         </div>
