Update activity details and images in index.html

--- a/index.html
+++ b/index.html
@@ -514,14 +514,14 @@
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Activity-5.png" alt="Data Analytics for Zakat Allocation Optimization" />
+                        <img src="images/Activity-5.png" alt="Module Developer Usrah in Action" />
                     </div>
-                    <h3>👏🏻 Activity 5</h3>
-                    <p>Sports, arts, cultural activities, or other interests outside of academics.</p>
+                    <h3>👏🏻 Module Developer Usrah in Action</h3>
+                    <p>Collaborate in developing modules for primary school students (mobile application development)</p>
                 </div>
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Activity-6.png" alt="Data Analytics for Zakat Allocation Optimization" />
+                        <img src="images/Activity-6.png" alt="Volunteer Mahasiswa Untuk Semua IIUM 2025" />
                     </div>
                     <h3>✅ Volunteer Mahasiswa Untuk Semua IIUM 2025</h3>
                     <p>Joining as volunteer for a 'gotong-royong' programme in IIUM</p>
