Change project image format from PNG to JPEG

--- a/index.html
+++ b/index.html
@@ -440,7 +440,7 @@
             <div class="card-grid">
                 <div class="card">
                     <div class="card-image">
-                        <img src="images/Project-1.png" alt="Final Year Project"/>
+                        <img src="images/Project-1.jpeg" alt="Final Year Project"/>
                     </div>
                     <h3>💻 Final Year Project - LeptoSafe</h3>
                     <p>LeptoSafe, a Flutter-based mobile application focusing on the individual management of the zoonotic disease, leptospirosis. Features include hotspot and health facilities tracking as well as self-assessment questionnaire among others. The technology stack includes Flutter, Firebase, Google Maps API and Android Studio.</p>
