Update student description in index.html

--- a/index.html
+++ b/index.html
@@ -413,7 +413,7 @@
         <div class="container">
             <div class="hero-content">
                 <h1>Irfan Adib Sahak</h1>
-                <p>Final Year Computer Science Student</p>
+                <p>Final Year Computer Science Student at IIUM</p>
                 <a href="#contact" class="cta-button">Get In Touch</a>
             </div>
         </div>
